--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
 	letter-spacing: 0;
 }
 
+body.lock {
+	overflow: hidden;
+}
+
 span,
 div,
 ul,
@@ -73,6 +77,70 @@ button {
 
 .header__item.active {
 	color: #ffd700;
+}
+
+.header__menu-mobile {
+	position: absolute;
+	padding: 0 15px;
+	visibility: hidden;
+	background: #001C31;
+	top: 55px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: 2;
+	transition: all 0.4s ease;
+	scrollbar-width: none;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
+	overflow: hidden;
+}
+.noneVisible{
+	visibility: hidden;
+}
+
+.header__menu-mobile.active {
+	visibility: visible;
+}
+
+.heder__line-menu-mobile {
+	padding-top: 5%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.heder__line-menu-mobile span {
+	font-size: 16px;
+	line-height: 140%;
+	font-weight: 600;
+	color: #FFFFFF
+}
+
+.header__list-mobile-content {
+	padding-top: 30px;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	transition: all 0.3s ease;
+}
+
+.header__menu-link {
+	font-size: 16px;
+	line-height: 140%;
+	font-weight: 600;
+	color: #FFFFFF;
+	fill: #FFFFFF;
+	stroke: #FFFFFF;
+
+}
+
+.header__menu-link:hover {
+	color: #FFD700;
+	fill: #FFD700;
+	stroke: #FFD700;
 }
 
 .header__sublist,
@@ -1248,6 +1316,7 @@ button {
 	.bonuses__items {
 		grid-template-columns: repeat(1, 1fr);
 	}
+
 	.header__popup {
 		bottom: -180px;
 		left: 0px;
