--- a/css/style.css
+++ b/css/style.css
@@ -80,29 +80,28 @@ button {
 }
 
 .header__menu-mobile {
-	position: absolute;
+	position: fixed;
 	padding: 0 15px;
-	visibility: hidden;
 	background: #001C31;
 	top: 55px;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	left: auto;
+	right: -100%;
 	width: 100%;
-	height: 100vh;
-	z-index: 2;
-	transition: all 0.4s ease;
-	scrollbar-width: none;
-	overflow-y: scroll;
+	height: calc(100vh - 55px);
+	z-index: 10;
+	transition: right 0.5s ease;
+	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
-	overflow: hidden;
 }
-.noneVisible{
-	visibility: hidden;
+
+.header__menu-mobile.active {
+	right: 0;
+	/* выезжает плавно */
 }
 
 .header__menu-mobile.active {
 	visibility: visible;
+	right: 0;
 }
 
 .heder__line-menu-mobile {
@@ -116,7 +115,7 @@ button {
 	font-size: 16px;
 	line-height: 140%;
 	font-weight: 600;
-	color: #FFFFFF
+	color:  #FFD700;
 }
 
 .header__list-mobile-content {
