--- a/css/style.css
+++ b/css/style.css
@@ -1086,53 +1086,94 @@ button {
 #mlb2-30764281.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow {
 	margin: 0 !important;
 }
+.sliders{
+	padding: clamp(40px,1vw,60px) 0px clamp(20px,1vw,60px) 0px;
+}
 
 .sliders__content {
-	padding: 30px;
+	padding: clamp(20px, 1vw, 30px) ;
 	max-width: 1350px;
 	margin: 0 auto;
 	background: #113047;
-	border-radius: 20px;
+	border-radius: clamp(18px,1vw,20px);
 }
 
 .sliders__line {
 	display: flex;
 	justify-content: space-between;
-	padding-bottom: 20px;
+	padding-bottom: clamp(13px,1vw,20px);
 }
 
 .slider__line-left {
 	display: flex;
 	align-items: center;
-	gap: 10px;
+	gap: 6px;
 }
-
+.slider__title{
+	font-size: clamp(20px,1vw,26px);
+	font-weight: 600;
+	line-height: 140%;
+	color: #fff;
+	text-transform: uppercase;
+}
 .slider__line-right {
 	display: flex;
 	align-items: center;
 	gap: 10px;
 }
 
+
 .slider__line-right a {
 	padding-right: 20px;
-
+	font-size: clamp(16px,1vw,20px);
+	font-weight: 600;
+	line-height: 140%;
+	color: #FFD700;
+	text-transform: uppercase;
 }
 
 .slider-track {
 	display: flex;
 	overflow: hidden;
+	position: relative;
+}
+.slider-wrapper{
+	position: relative;
+}
+.slider-wrapper::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: var(--after-width, 100px);
+	/* ширина тени */
+	height: 100%;
+	pointer-events: none;
+	background: linear-gradient(90deg,
+			rgb(27 56 76 / 0%) 0%,
+			#011727 100%);
+}
+.slider__btn line{
+	stroke: #FFD700;
+}
+.slider__btn.disabled line {
+	stroke: #ffffff;
 }
 
 .slide {
 	flex: 0 0 18.18%;
-	width: 100%;
-	height: auto;
-	padding: 10;
+	padding: 0 5px;
 	box-sizing: border-box;
 }
-.slider__btn.disabled {
-	background: rgba(0, 0, 0, 0.2);
-	/* светлый, "неактивный" цвет */
+.slider-track .slide:first-child {
+	padding-left: 0px;
+}
+.slider-track .slide:last-child {
+	padding-right: 0px;
+}
+.slide img {
+	width: 100%;
+	height: 100%;
 }
 
 
@@ -1236,7 +1277,6 @@ button {
 	.item-line__why-demo:nth-child(3) {
 		grid-column: span 2;
 		justify-self: center;
-		/* центрируем по сетке */
 	}
 
 	.header__popup {
