--- a/css/style.css
+++ b/css/style.css
@@ -1163,6 +1163,7 @@ button {
 .slide {
 	flex: 0 0 18.18%;
 	padding: 0 5px;
+	border-radius: 10px;
 	box-sizing: border-box;
 }
 .slider-track .slide:first-child {
