--- a/css/style.css
+++ b/css/style.css
@@ -1086,22 +1086,23 @@ button {
 #mlb2-30764281.ml-form-embedContainer .ml-form-embedWrapper .ml-form-embedBody .ml-form-checkboxRow {
 	margin: 0 !important;
 }
-.sliders{
-	padding: clamp(40px,1vw,60px) 0px clamp(20px,1vw,60px) 0px;
+
+.sliders {
+	padding: clamp(40px, 1vw, 60px) 0px clamp(20px, 1vw, 60px) 0px;
 }
 
 .sliders__content {
-	padding: clamp(20px, 1vw, 30px) ;
+	padding: clamp(20px, 1vw, 30px);
 	max-width: 1350px;
 	margin: 0 auto;
 	background: #113047;
-	border-radius: clamp(18px,1vw,20px);
+	border-radius: clamp(18px, 1vw, 20px);
 }
 
 .sliders__line {
 	display: flex;
 	justify-content: space-between;
-	padding-bottom: clamp(13px,1vw,20px);
+	padding-bottom: clamp(13px, 1vw, 20px);
 }
 
 .slider__line-left {
@@ -1109,13 +1110,15 @@ button {
 	align-items: center;
 	gap: 6px;
 }
-.slider__title{
-	font-size: clamp(20px,1vw,26px);
+
+.slider__title {
+	font-size: clamp(20px, 1vw, 26px);
 	font-weight: 600;
 	line-height: 140%;
 	color: #fff;
 	text-transform: uppercase;
 }
+
 .slider__line-right {
 	display: flex;
 	align-items: center;
@@ -1125,7 +1128,7 @@ button {
 
 .slider__line-right a {
 	padding-right: 20px;
-	font-size: clamp(16px,1vw,20px);
+	font-size: clamp(16px, 1vw, 20px);
 	font-weight: 600;
 	line-height: 140%;
 	color: #FFD700;
@@ -1137,25 +1140,28 @@ button {
 	overflow: hidden;
 	position: relative;
 }
-.slider-wrapper{
+
+.slider-wrapper {
 	position: relative;
 }
+
 .slider-wrapper::after {
 	content: "";
 	position: absolute;
 	top: 0;
 	right: 0;
 	width: var(--after-width, 100px);
-	/* ширина тени */
 	height: 100%;
 	pointer-events: none;
 	background: linear-gradient(90deg,
 			rgb(27 56 76 / 0%) 0%,
 			#011727 100%);
 }
-.slider__btn line{
+
+.slider__btn line {
 	stroke: #FFD700;
 }
+
 .slider__btn.disabled line {
 	stroke: #ffffff;
 }
@@ -1165,16 +1171,91 @@ button {
 	padding: 0 5px;
 	border-radius: 10px;
 	box-sizing: border-box;
+	position: relative;
 }
-.slider-track .slide:first-child {
+
+/* .slider-track .slide:first-child {
 	padding-left: 0px;
 }
 .slider-track .slide:last-child {
 	padding-right: 0px;
-}
+} */
 .slide img {
 	width: 100%;
 	height: 100%;
+}
+
+.slider__info {
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity 0.3s ease, visibility 0.3s ease;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	padding: 10px 15px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	box-sizing: border-box;
+	border: 1px solid #657E90;
+	border-radius: 20px;
+	background: #103956;
+
+}
+
+.slide:hover .slider__info {
+	opacity: 1;
+	visibility: visible;
+}
+
+.slider__info-title {
+	font-size: clamp(16px, 1vw, 20px);
+	font-weight: 700;
+	line-height: 140%;
+	color: #fff;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+
+.slider__info-text {
+	font-size: clamp(14px, 1vw, 14px);
+	font-weight: 400;
+	line-height: 140%;
+	color: #fff;
+
+}
+
+.slider__info-text span {
+	font-weight: 700;
+	padding-right: 6px;
+	margin-bottom: 10px;
+}
+
+.slider__info-line {
+	padding-top: 5px;
+	display: flex;
+	gap: 5px;
+	justify-items: space-between;
+}
+
+.slider__info-link {
+	border-radius: 10px;
+	padding: 8px 14px;
+	font-size: clamp(14px, 1vw, 14px);
+	font-weight: 400;
+	line-height: 140%;
+}
+
+.slider__info-link-demo {
+	background: #00192B;
+	color: #FFFFFF;
+}
+
+.slider__info-link-play {
+	background: #FFC700;
+	color: #000000;
 }
 
 
