--- a/css/style.css
+++ b/css/style.css
@@ -1194,14 +1194,14 @@ button {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	padding: 10px 15px;
+	padding: 10px clamp(7px, 0.5vw, 15px);
 	margin: 0 5px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	box-sizing: border-box;
 	border: 1px solid #657E90;
-	border-radius: 16px;
+	border-radius: 10px;
 	background: #103956;
 
 }
@@ -1212,16 +1212,16 @@ button {
 }
 
 .slider__info-title {
-	font-size: clamp(16px, 1vw, 20px);
+	font-size: clamp(18px, 1vw, 20px);
 	font-weight: 700;
 	line-height: 140%;
 	color: #fff;
 	text-transform: uppercase;
-	margin-bottom: 10px;
+	margin-bottom: clamp(5px, 1vw, 10px);
 }
 
 .slider__info-text {
-	font-size: clamp(14px, 1vw, 14px);
+	font-size: clamp(12px, 1vw, 14px);
 	font-weight: 400;
 	line-height: 140%;
 	color: #fff;
@@ -1231,20 +1231,20 @@ button {
 .slider__info-text span {
 	font-weight: 700;
 	padding-right: 6px;
-	margin-bottom: 10px;
+	margin-bottom: clamp(5px, 1vw, 10px);
 }
 
 .slider__info-line {
-	padding-top: 5px;
+	padding-top: clamp(0px, 1vw, 5px);
 	display: flex;
-	gap: 5px;
+	gap: clamp(2px, 0.3vw, 5px);
 	justify-items: space-between;
 }
 
 .slider__info-link {
-	border-radius: 10px;
-	padding: 8px 10px;
-	font-size: clamp(14px, 1vw, 14px);
+	border-radius: clamp(7px, 0.3vw, 9px);
+	padding: clamp(4px, 0.3vw, 8px) clamp(7px, 0.3vw, 9px);
+	font-size: clamp(11px, 1vw, 14px);
 	font-weight: 400;
 	line-height: 140%;
 }
@@ -1299,12 +1299,23 @@ button {
 		right: -185px;
 		top: -10px;
 	}
+
+	.slide {
+		flex: 0 0 22.22%;
+		max-height: 180px;
+	}
+
+
 }
 
 @media (max-width: 950px) {
 	.header__btn svg {
 		width: 20px;
 		height: 25px;
+	}
+
+	.slide {
+		flex: 0 0 28.57%;
 	}
 
 }
@@ -1385,6 +1396,12 @@ button {
 		grid-template-columns: repeat(1, 1fr);
 		gap: 10px;
 
+	}
+}
+@media (max-width: 650px) {
+	.slide {
+		flex: 0 0 33.3%;
+		height: auto;
 	}
 }
 
@@ -1479,7 +1496,15 @@ button {
 	.main__title {
 		margin-bottom: 20px;
 	}
-
+	.slide {
+		flex: 0 0 40%;
+		height: auto;
+		padding: 0 3px;
+	}
+	.slider__info{
+		margin: 0 3px;
+		padding: 5px;
+	}
 
 }
 
@@ -1495,6 +1520,15 @@ button {
 		width: 100%;
 		height: 180px;
 	}
+	.slide {
+		flex: 0 0 50%;
+		padding: 0 3px;
+	}
 
-
+}
+@media (max-width: 400px) {
+	.slide {
+		flex: 0 0 66.66%;
+		height: 160px;
+	}
 }
