--- a/css/style.css
+++ b/css/style.css
@@ -1143,6 +1143,7 @@ button {
 
 .slider-wrapper {
 	position: relative;
+	padding-right: 1px;
 }
 
 .slider-wrapper::after {
@@ -1523,6 +1524,9 @@ button {
 	.slide {
 		flex: 0 0 50%;
 		padding: 0 3px;
+	}
+	.slider__info-link{
+		font-size: 12px;
 	}
 
 }
