--- a/css/style.css
+++ b/css/style.css
@@ -1138,10 +1138,10 @@ button {
 	display: flex;
 	align-items: center;
 	gap: 6px;
-}
+} 
 
 .slider__title {
-	font-size: clamp(20px, 1vw, 26px);
+	font-size: clamp(18px, 4vw, 26px);
 	font-weight: 600;
 	line-height: 140%;
 	color: #fff;
@@ -1151,12 +1151,12 @@ button {
 .slider__line-right {
 	display: flex;
 	align-items: center;
-	gap: 10px;
+	gap: clamp(5px , 1vw, 10px);
 }
 
 
 .slider__line-right a {
-	padding-right: 20px;
+	padding-right: clamp(0px, 1vw, 20px);
 	font-size: clamp(16px, 1vw, 20px);
 	font-weight: 600;
 	line-height: 140%;
@@ -1551,6 +1551,19 @@ button {
 	.slider__info{
 		margin: 0 3px;
 		padding: 5px;
+	}
+	.slider__line-left svg{
+		max-width: 23px;
+		max-height: 18px;
+		width: 100%;
+		height: 100%;
+	}
+	.slider__line-left {
+		gap:3px;
+	}
+	.slider__btn{
+		width: 22px;
+		height: 22px;
 	}
 
 }
