--- a/css/style.css
+++ b/css/style.css
@@ -1209,22 +1209,22 @@ button {
 	padding: 0 5px;
 	border-radius: 10px;
 	box-sizing: border-box;
-	position: relative;
 
+}
+.slide .slider__contener {
+	width: 100%;
+	max-width: 217px;
+	height: auto;
+	aspect-ratio: 1 / 1;
+	object-fit: cover;
+	pointer-events: none;
+	display: block;
+	position: relative;
 }
 
 .slide img {
 	width: 100%;
-	max-width: 217px;
-	/* ширина на всю доступную область */
-	aspect-ratio: 1 / 1;
-	/* квадрат */
-	object-fit: cover;
-	/* картинка обрезается по краям, но не искажается */
-	pointer-events: none;
-	/* чтобы клики шли на .slide, а не на картинку */
-	display: block;
-	/* убирает лишние отступы у img */
+	height: 100%;
 }
 
 .slider__info {
@@ -1237,14 +1237,14 @@ button {
 	right: 0;
 	bottom: 0;
 	padding: 10px clamp(7px, 0.5vw, 15px);
-	margin: 0 5px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	box-sizing: border-box;
 	border: 1px solid #657E90;
-	border-radius: 10px;
+	border-radius: 16px;
 	background: #103956DB;
+	aspect-ratio: 1 / 1;
 
 }
 
@@ -1598,8 +1598,7 @@ button {
 		grid-template-columns: repeat(1, 1fr);
 	}
 	.slider__info{
-		margin: 0 2px;
-		border-radius: 16px;
+		border-radius: 14px;
 	}
 	.slider{
 		width: 170px;
@@ -1614,10 +1613,6 @@ button {
 		height: 180px;
 	}
 
-		.slide {
-			flex: 0 0 auto;
-	
-		}
 	
 		.slide img {
 			width: 170px;
@@ -1634,6 +1629,7 @@ button {
 	}
 
 }
+
 
 @media (max-width: 400px) {
 	/* .slide {
