--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ button {
 
 .main__title {
 	font-weight: 700;
-	font-size: clamp(26px, 1vw, 40px);
+	font-size: clamp(26px, 4vw, 40px);
 	line-height: 140%;
 	margin-bottom: clamp(5px, 1vw, 15px);
 	max-width: 620px;
@@ -1208,6 +1208,7 @@ button {
 .slide img {
 	width: 100%;
 	height: 100%;
+	border-radius: 16px;
 }
 
 .slider__info {
