--- a/css/style.css
+++ b/css/style.css
@@ -1175,9 +1175,7 @@ button {
 	width: var(--after-width, 100px);
 	height: 100%;
 	pointer-events: none;
-	background: linear-gradient(90deg,
-			rgb(27 56 76 / 0%) 0%,
-			#011727 100%);
+		background: linear-gradient(90deg, rgba(27, 56, 76, 0.0) 0%, rgba(27, 56, 76, 0.2) 12.02%, rgba(27, 56, 76, 0.3) 27.67%, rgba(5, 36, 58, 0.8) 52.39%, rgba(3, 29, 49, 0.900295) 75.33%, #011727 100%);
 }
 
 .slider__btn line {
@@ -1198,7 +1196,7 @@ button {
 .slide .slider__contener {
 	width: 100%;
 	max-width: 217px;
-	height: auto;
+	height: -webkit-fill-available;
 	aspect-ratio: 1 / 1;
 	object-fit: cover;
 	pointer-events: none;
