--- a/css/online-casinos.css
+++ b/css/online-casinos.css
@@ -211,7 +211,17 @@
     background: #dfad08;
    
 }
+.element__provider-focus .img__provider-focus{
+    max-width: 110px;
+    max-height: 110px;
 
+}
+.img__provider-focus img{
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 1 / 1;
+}
 /* 
+
 <span class="text__line-block">pokies24.io</span>
 */
