--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ body {
 
 body.lock {
 	overflow: hidden;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 }
 
 span,
@@ -60,6 +65,11 @@ button {
 	position: relative;
 }
 
+.logo{
+	display: flex;
+	align-items: center;
+
+}
 .header__list {
 	display: flex;
 	align-items: center;
@@ -236,7 +246,6 @@ button {
 	}
 }
 
-/* когда кнопка нажата — убираем анимацию */
 .blink:active,
 .header__btn.clicked {
 	animation: none;
@@ -581,6 +590,10 @@ button {
 	align-items: center;
 	justify-content: center;
 	gap: clamp(20px, 8vw, 150px);
+}
+.footer__bottom a{
+	display: flex;
+	align-items: center;
 }
 
 .footer__bottom a svg,
@@ -1517,6 +1530,9 @@ button {
 		width: 13px;
 		height: 10px;
 		flex-shrink: 0;
+	}
+	.practical__element {
+		align-items: start;
 	}
 	
 
